@@ -108,7 +108,7 @@ public class AnimalAccountDisplayColumnFactory implements DisplayColumnFactory
             if (errors.isEmpty())
                 return HtmlString.unsafe(html);
             else
-                return HtmlString.of(errors.get(0));
+                return HtmlString.of(errors.getFirst());
         }
 
         @NotNull
